# pigbot

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  default.env  pyproject.toml
.github/workflows/: main-build-push.yml  main-build.yml  main.yml  style.yml
app/: app.py  main.py  requirements.txt  requirements.txt.blank
app/api/: common.py  dalle.py  messaging.py  minecraft.py  songbird.py
app/cli/: talk.py
app/models/: art.py  config.py  talk.py
app/util/: logutil.py  trie.py
